syntax = "proto3";

package payment;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// ----------- MESSAGE DEFINITIONS ------------

message Payment {
  string id = 1;
  string order_id = 2;
  double amount = 3;
  string method = 4;
  string status = 5; // "success" | "failed"
  string username = 6;
  google.protobuf.Timestamp paidAt = 7;
}

// ----------- REQUEST / RESPONSE MESSAGES ------------

message GetPayment {
  string username = 1;
}

message GetPaymentByIdRequest {
  string username = 1;
  string id = 2;
}

message PaymentResponse {
  Payment payment = 1;
}

message GetAllPaymentsResponse {
  repeated Payment payments = 1;
}

message GetPayments{
  int32 status = 1; // Page number for pagination
  string message = 2; 
  GetAllPaymentsResponse data = 3;
}

message GetURLPayment{
  string payUrl = 1;
  string qrCodeUrl = 2;
}

message GetDetailPayment{
  int32 status = 1; // Page number for pagination
  string message = 2; 
  PaymentResponse data = 3;
}

message CreatePaymentRequest {
  string orderId = 1;
  double total = 2;
  string method = 3; 
  string username = 4;
}
message GetMomoTransaction{
  int32 status = 1;
  string message = 2;
  GetURLPayment transaction = 3;
}

// ----------- SERVICE DEFINITIONS ------------

service PaymentService {
  rpc GetPayments(GetPayment) returns (GetPayments);
  rpc GetPaymentById(GetPaymentByIdRequest) returns (GetDetailPayment);
  rpc CreatePayment(CreatePaymentRequest) returns (GetMomoTransaction);
}